--- a/pyboard_code/www/style.css
+++ b/pyboard_code/www/style.css
@@ -146,13 +146,22 @@ body {
   overflow-x: hidden;
 }
 
+h1 {
+  margin-top: 1em;
+}
+  #id1 {margin-top: 1em;}
+  #id2 {margin-top: 2em;}
+  #id3 {margin-top: 3em;}
+  #id4 {margin-top: 4em;}
+
 .sky {
   z-index: -1;
   background: linear-gradient(#579cf2 20%, #9bcef2 100%);/*(#85a5cc 0, #d0e4f2 100%)*/
   box-shadow: 0 0 20px #d0e4f2;
   height: 44%;
+  size: cover;
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   width: 100%;
 }
 .sky .cloud {
@@ -211,11 +220,18 @@ body {
   width: 60px;
 }
 
+/*
+size: cover;
+overflow: hidden;
+position: absolute;
+*/
 .ground {
   z-index: -1;
   background: linear-gradient(#6e9e03 0, #4f7302 100%);
   height: 57%;
-  position: absolute;
+  size: cover;
+  /*overflow: hidden;*/
+  position: fixed;
   bottom: 0;
   right: 0;
   left: 0;
