--- a/pyboard_code/www/style.css
+++ b/pyboard_code/www/style.css
@@ -92,7 +92,6 @@ body {
 }
 
 .rainbow-preloader {
-  z-index: -1;
   height: 90px;
   left: 50%;
   margin-left: -90px;
@@ -152,6 +151,7 @@ h1 {
 }
   #id1 {margin-top: 1em;}
   #id2 {margin-top: 2em;}
+  #id3 {margin-top: 3em;}
   #id4 {margin-top: 4em;}
 
 .sky {
